		   CHANGES IN formatR VERSION 0.2-4

NEW FEATURES

  o the empty lines before 'else' will be removed even if
  keep.blank.line = TRUE; it is ill-advised to use blank lines among
  incomplete code chunks, e.g. 

  if (TRUE)

  {'this is a BAD style of R programming'}



		   CHANGES IN formatR VERSION 0.2-3

NEW FEATURES

  o 'else ...' will be moved back to the last line so that we will no
  longer see an 'else' statement in a new line


		   CHANGES IN formatR VERSION 0.2-2

NEW FEATURES

    o formatR now uses the parser package to parse inline comments,
  which can guarantee that these comments will be correctly parsed (no
  longer uses the 'unsafe' regular expressions to parse comments, so
  forget about the previous rules of writing comments -- just write
  comments with an arbitrary number of spaces before # as you wish)

    o the use of parser also enabled a new feature: '=' can be
  replaced with '<-' wherever appropriate (for example, '=' in
  function arguments will not be replaced; only thoese equal signs
  which are used to assigning purposes can be replaced)

    o long roxygen comments will not be wrapped (i.e. comments begin
  with #' or ##')

MINOR CHANGES

    o fixed a minor problem in the function usage() (out --> output)

    o comments after { will be moved to the next line (in previous
  versions, these comments will cause errors)


		   CHANGES IN formatR VERSION 0.2-1

MINOR CHANGES

    o the escape character '\' in comments of complete lines will be
  successfully preserved, which is especially useful for tidy.source()
  to format the roxygen comments since we usually write comments like
  "##' @author Someone \email{}" but "\e" is not a legal character in
  R (this will lead to errors in earlier versions of this package)


		   CHANGES IN formatR VERSION 0.2-0

NEW FEATURES

    o a new function usage() to print the formatted usage of a function


		   CHANGES IN formatR VERSION 0.1-9

NEW FEATURES
